fixed some more centering problems, added spacing between html elements in the return on each page to make ccode easier to read

--- a/src/components/SearchPage/SearchPage.css
+++ b/src/components/SearchPage/SearchPage.css
@@ -28,10 +28,10 @@
 }
 
 .search-btn {
-    margin: 0;
-    position: relative;
-    left: 30%;
-  }
+  margin: 0;
+  position: relative;
+  text-align: center;
+}
 
 .result-table {
   border: 1px solid;
@@ -49,4 +49,10 @@ th {
 td {
   border: 2px solid;
   border-color: #0A0;
+}
+
+h3 {
+  margin: 0;
+  position: relative;
+  text-align: center;
 }
